<resources>
    <string name="app_name">Fiubapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Fragment1">This is Fragment 1</string>
    <string name="Fragment2">This is Fragment 2</string>
    <string name="Fragment3">This is Fragment 3</string>
    <string name="numeroPadron">Padrón</string>
    <string name="clave">Clave</string>
    <string name="login">Login</string>
    <string name="soyIntercambio">Soy de intercambio</string>
    <string name="soyNuevo">Soy nuevo</string>
    <string name="pasaporte">Pasaporte</string>
    <string name="urlAPI">http://192.168.56.1:8080/fiubappREST/api</string>
    <string name="prefs_name">MyPrefsFile</string>
    <string name="educacionSecundaria">Educación secundaria</string>
    <string name="escuela">Escuela</string>
    <string name="fechaFin">Fecha fin</string>
    <string name="fechaInicio">Fecha inicio</string>
    <string name="titulo">Título</string>
    <string-array name="genders">
        <item>Seleccione</item>
        <item>Femenino</item>
        <item>Masculino</item>
    </string-array>
    <string-array name="config">
        <item>Perfil</item>
        <item>Muro</item>
        <item>Localización</item>
        <item>Salir</item>
    </string-array>
    <string name="application_notification_message">quiere ser tu compañero</string>
    <string name="application_notification_mark_as_viewed">visto</string>
    <string name="CARRERAS">CARRERAS</string>
    <string name="BuscarGrupos">BUSCAR GRUPOS</string>
    <string name="CrearGrupo">CREAR GRUPO</string>
    <string name="nombre">Nombre</string>
    <string name="buscar">BUSCAR</string>
    <string name="verCercanos">VER CERCANOS</string>
    <string name="companerosCercanos">Compañeros cercanos</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="kms">KMs.</string>
    <string name="ver_amigos_hasta">Ver amigos hasta</string>
    <string name="mostrar_mi_ubicacion">Mostrar mi ubicación</string>
    <string name="configurar_localizacion">Configurar localización</string>
    <string name="job_description">Puesto</string>
    <string name="job_header">Empresa</string>
    <string name="lbl_job_startdate">Fecha de Inicio</string>
    <string name="lbl_job_enddate">Fecha de Finalizacion</string>
    <string name="JOBS">EMPLEOS</string>
    <string name="lbl_job_firm">Empresa</string>
    <string name="expand">Modificar criterio de Busqueda</string>
    <string name="localizacion_apagada">"Tiene apagada la localización, ¿la quiere encender?"</string>
    <string name="ErraseEndDate">Borrar</string>
    <string name="datos">DATOS</string>
    <string name="fiuba">FIUBA</string>
    <string name="empleos">EMPLEOS</string>
    <string name="educacion">EDUCACIÓN</string>
    <string name="apuntes">APUNTES</string>
    <string name="informacion">INFO</string>
    <string name="discusiones">DISCUSIÓN</string>
    <string name="archivos">ARCHIVOS</string>
    <string name="muro">MURO</string>
    <string name="nombre_vacio">Nombre vacío</string>
    <string name="creado_por">Creado por:</string>
    <string name="fecha_creacion">Fecha de creación:</string>
    <string name="mensaje_validar_tamanio_imagen">Debe seleccionar una imagen con un tamaño menor a 10MB</string>
    <string name="solicitud_companiero_ya_enviada">Ya fue enviada una solicitud a este compañero</string>
	<string name="mensaje_validar_login_error_3004">La solicitud de registración está pendiente de aprobación por parte del administrador</string>
    <string name="mensaje_validar_login_error_3005">El usuario se encuentra momentáneamente suspendido</string>
    <string name="mensaje_validar_login_usuario_incorrrecto"> y/o contraseña incorrecta</string>
	<string name="lbl_created_by">Iniciada por:</string>
    <string name="lbl_creation_date">Creada</string>
    <string name="creatDiscussion">INICIAR DISCUSIÓN</string>
    <string name="title_activity_discussion">Discussion</string>
    <string name="lblAddMessage">COMENTAR</string>
    <string name="txtvw_discussion_name">Nombre</string>
    <string name="txtvw_first_message">Comentario</string>
    <string name="escribir_muro">ESCRIBIR</string>
    <string name="miembros">MIEMBROS</string>
    <string name="companeros_en_comun">EN COMÚN</string>
    <string name="lbl_upload">Subir Archivo</string>
    <string name="lbl_uploaded">Archivo subido</string>
    <string name="txt_wall_configuration">Habilitar escritura de mensaje</string>
    <string name="configurar_Muro">Configurar Muro</string>
    <string name="subir_archivo">SUBIR ARCHIVO</string>
    <string name="ingresar_a_grupo">¿Ingresar al grupo?</string>
    <string name="discussion_message">comento en la discusion</string>
</resources>
