<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/all"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff2ec7e8"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/tvTituloHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="25px"
                android:textColor="#000000"
                android:text="@string/educacionSecundaria"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true" />

            <ImageView
                android:id="@+id/imgEditar"
                android:src="@drawable/ic_editar"
                android:layout_marginRight="5px"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout android:focusable="true"
                android:focusableInTouchMode="true" android:layout_width="0px"
                android:layout_height="0px" />
            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:layout_alignBaseline="@+id/etTitulo"
                android:layout_alignBottom="@+id/etTitulo" />

            <EditText android:id="@+id/etTitulo"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="15px"
                android:layout_marginTop="5px"
                android:enabled="false"
                android:layout_toRightOf="@+id/tvTitulo" />

            <TextView
                android:id="@+id/tvEscuela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/escuela"
                android:layout_alignBaseline="@+id/etEscuela"
                android:layout_alignBottom="@+id/etEscuela" />

            <EditText android:id="@+id/etEscuela"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="15px"
                android:enabled="false"
                android:layout_below="@+id/etTitulo"
                android:layout_toRightOf="@+id/tvEscuela" />

            <TextView
                android:id="@+id/tvFechaInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaInicio"
                android:layout_alignBaseline="@+id/etFechaInicio"
                android:layout_alignBottom="@+id/etFechaInicio" />

            <EditText android:id="@+id/etFechaInicio"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:focusable="false"
                android:enabled="false"
                android:layout_marginLeft="15px"
                android:layout_below="@+id/etEscuela"
                android:layout_toRightOf="@+id/tvFechaInicio" />

            <TextView
                android:id="@+id/tvFechaFin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaFin"
                android:layout_alignBaseline="@+id/etFechaFin"
                android:layout_alignBottom="@+id/etFechaFin" />

            <EditText android:id="@+id/etFechaFin"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:focusable="false"
                android:enabled="false"
                android:layout_marginLeft="15px"
                android:layout_below="@+id/etFechaInicio"
                android:layout_toRightOf="@+id/tvFechaFin" />


        </RelativeLayout>


    </RelativeLayout>
</FrameLayout>